<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        style="@style/view_style"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/one_loop" />

        <CheckBox
            android:id="@+id/csb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/check_bac"
            android:button="@null" />
    </RelativeLayout>

    <View
        style="@style/view_style"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/two_loop" />

        <CheckBox
            android:id="@+id/csb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/check_bac"
            android:button="@null" />
    </RelativeLayout>

    <View
        style="@style/view_style"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <RelativeLayout

        style="@style/RelativeLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/one_repair_ring" />

        <CheckBox
            android:id="@+id/csb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/check_bac"
            android:button="@null" />
    </RelativeLayout>

    <View
        style="@style/view_style"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/two_repair_ring" />

        <CheckBox
            android:id="@+id/csb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/check_bac"
            android:button="@null" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray" />

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="18dp"
            android:text="@string/water_supply_pump_run_manager" />

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_bs_manul"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rb_manul"
                android:button="@null"
                android:gravity="center"
                android:text="手动" />

            <RadioButton
                android:id="@+id/btn_bs_auto"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rb_auto"
                android:button="@null"
                android:gravity="center"
                android:text="自动" />

        </RadioGroup>


    </RelativeLayout>

    <View
        style="@style/view_style"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <include layout="@layout/runsettwo" />


</LinearLayout>